==============
lxml changelog
==============

2.3 (under development)
=======================

Features added
--------------

* New function ``lxml.etree.register_namespace(prefix, uri)`` that
  globally registers a namespace prefix for a namespace that newly
  created Elements in that namespace will use automatically.  Follows
  ElementTree 1.3.

* Support 'unicode' string name as encoding parameter in
  ``tostring()``, following ElementTree 1.3.

* Support 'c14n' serialisation method in ``ElementTree.write()`` and
  ``tostring()``, following ElementTree 1.3.

* The ElementPath expression syntax (``el.find*()``) was extended to
  match the upcoming ElementTree 1.3 that will ship in the standard
  library of Python 3.2/2.7.  This includes extended support for
  predicates as well as namespace prefixes (as known from XPath).

* During regular XPath evaluation, various ESXLT functions are
  available within their namespace when using libxslt 1.1.26 or later.

* Support passing a readily configured logger instance into
  ``PyErrorLog``, instead of a logger name.

* On serialisation, the new ``doctype`` parameter can be used to
  override the DOCTYPE (internal subset) of the document.

* New parameter ``output_parent`` to ``XSLTExtension.apply_templates()``
  to append the resulting content directly to an output element.

* ``XSLTExtension.process_children()`` to process the content of the
  XSLT extension element itself.

* ISO-Schematron support based on the de-facto Schematron reference
  'skeleton implementation'.

* XSLT objects now take XPath object as ``__call__`` stylesheet
  parameters.

* Enable path caching in ElementPath (``el.find*()``) to avoid parsing
  overhead.

* Setting the value of a namespaced attribute always uses a prefixed
  namespace instead of the default namespace even if both declare the
  same namespace URI.  This avoids serialisation problems when an
  attribute from a default namespace is set on an element from a
  different namespace.
